--- a/gui/package.json
+++ b/gui/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "main": "static/gen/host.js",
   "scripts": {},
+  "engines": {
+    "node": "^7.10.0"
+  },
   "devDependencies": {
-    "electron-prebuilt": "0.34.3",
-    "electron-rebuild": "^1.0.2",
+    "electron-prebuilt": "^0.34.3",
+    "electron": "^1.5.1",
     "bootstrap": "~3.3.0",
     "css-loader": "^0.9.1",
     "file-loader": "^0.8.1",
